<resources>
    <string name="app_name">Calculator Test</string>
    <string name="action_settings">Settings</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_divide">/</string>
    <string name="_multiply">x</string>
    <string name="_subtraction">-</string>
    <string name="_Dot">.</string>
    <string name="_Delete">Del</string>
    <string name="_Equal">=</string>
    <string name="hint">Problem</string>
    <string name="answer">answer</string>
    <string name="_Addition">+</string>
</resources>